# AFFOGATO

./: .gitignore  README.md  affogato.py  example.ipynb  joss.txt  paper.bib  paper.md  pyproject.toml  supernolan.py
affogato/: __init__.py  affogato.py  supernolan.py
affogato/affogato.egg-info/: PKG-INFO  SOURCES.txt
affogato/affogato_agn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
affogato/example.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
